--- a/build.gradle
+++ b/build.gradle
@@ -3,6 +3,7 @@ buildscript {
         compose_version = '1.1.0'
         okhttp3_version = '4.9.3'
         retrofit_version = '2.9.0'
+        hilt_version = '2.41'
     }
 }// Top-level build file where you can add configuration options common to all sub-projects/modules.
 plugins {
@@ -10,6 +11,7 @@ plugins {
     id 'com.android.library' version '7.2.1' apply false
     id 'org.jetbrains.kotlin.android' version '1.5.31' apply false
     id 'org.jetbrains.kotlin.jvm' version '1.6.10' apply false
+    id 'com.google.dagger.hilt.android' version "$hilt_version" apply false
 }
 
 task clean(type: Delete) {
