Implement Home page.
- Integrate compose navigation, version: 2.5.0
- Add necessary strings and icons

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -75,4 +75,10 @@ dependencies {
     kapt "com.google.dagger:hilt-android-compiler:$hilt_version"
     implementation "com.google.dagger:dagger:$hilt_version"
     kapt "com.google.dagger:dagger-compiler:$hilt_version"
+
+    // Navigation
+    implementation "androidx.navigation:navigation-compose:$navigation_version"
+
+    // Hilt & Navigation
+    implementation("androidx.hilt:hilt-navigation-compose:$hilt_navigation_version")
 }
