Implement swipe refresh in home page.
- Integrate accompanist swipe refresh, version 0.24.13-rc

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -81,4 +81,7 @@ dependencies {
 
     // Hilt & Navigation
     implementation("androidx.hilt:hilt-navigation-compose:$hilt_navigation_version")
+
+    // Accompanist Swipe Refresh Layout
+    implementation "com.google.accompanist:accompanist-swiperefresh:$accompanist_swiperefresh_version"
 }
