--- a/build.gradle
+++ b/build.gradle
@@ -6,6 +6,7 @@ buildscript {
         hilt_version = '2.41'
         navigation_version = "2.5.0"
         hilt_navigation_version = "1.0.0"
+        accompanist_swiperefresh_version = "0.24.13-rc"
     }
 }// Top-level build file where you can add configuration options common to all sub-projects/modules.
 plugins {
