--- a/build.gradle
+++ b/build.gradle
@@ -1,12 +1,25 @@
 buildscript {
     ext {
-        compose_version = '1.1.0'
+        core_ktx_version = '1.8.0'
+        lifecycle_runtime_ktx_version = '2.5.0'
+        activity_compose_version = '1.5.0'
+        compose_version = '1.1.1'
         okhttp3_version = '4.9.3'
         retrofit_version = '2.9.0'
         hilt_version = '2.41'
-        navigation_version = "2.5.0"
-        hilt_navigation_version = "1.0.0"
-        accompanist_swiperefresh_version = "0.24.13-rc"
+        navigation_version = '2.5.0'
+        hilt_navigation_version = '1.0.0'
+        accompanist_swiperefresh_version = '0.24.13-rc'
+
+        // unit test
+        junit_version = '4.13.2'
+        arch_core_testing_version = '2.1.0'
+        mockk_version = '1.12.4'
+        coroutines_test_version = '1.6.1'
+
+        // android ui test
+        android_junit_version = '1.1.3'
+        espresso_version = '3.4.0'
     }
 }// Top-level build file where you can add configuration options common to all sub-projects/modules.
 plugins {
